3/8 Game restart/backtoMain
G1~G9 除G2 玩完後會跳重玩/離開

--- a/assets/game/8-digger-main/index.html
+++ b/assets/game/8-digger-main/index.html
@@ -70,7 +70,9 @@
                     this.loadLevel();
                 }
                 else {
-                    this.reset();
+                    //Lili edit endgame
+                    parent.callParent()
+                    //this.reset();
                 }
             }
         };
@@ -80,7 +82,7 @@
             }
         };
         Application.prototype.reset = function () {
-            this._lives = 20;
+            this._lives = 3; //Lili edit endgame
             this._score = 0;
             this._room = 0;
             this.loadLevel();
