--- a/assets/game/6-pacman-master/index.html
+++ b/assets/game/6-pacman-master/index.html
@@ -12,14 +12,19 @@
 				overflow: hidden;
 			}
 			.wrapper{
-				width: 960px;
+				width: 892px;
+				height: 535px;
 				margin:0 auto;
-				color:#999;
+				background-color:#000;
 			}
 			canvas {
 				display:block;
-				width: 740px;
-				height: 520px;
+				left: 0;
+				right: 0;
+				margin-left: auto;
+				margin-right: auto;
+				width: 761px;
+				height: 535px;
 				background: #000;
 			}
 			.info{
