--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="header">
-            <a href="main.php"><img src="assets/東方哈哈樂園 字.png" class="img-logo"></a>
+            <a href="main.php"><img src="assets/img-logo.png" class="img-logo"></a>
         </div>
 
         <div class="main-area">
