03/12 Connect frontend and backend
- Question update change by game_session
- add wine test

--- a/assets/game/8-digger-main/index.html
+++ b/assets/game/8-digger-main/index.html
@@ -71,7 +71,7 @@
                 }
                 else {
                     //Lili edit endgame
-                    parent.callParent()
+                    setTimeout('parent.callParent()', 1000);
                     //this.reset();
                 }
             }
