03/17 change ad finally

--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
-<?php
+<!-- <?php
     session_start();
     $game_id = "";
     include("pdoInc.php");
-?>
+?> -->
 
 <!DOCTYPE html>
 <html>
@@ -21,29 +21,29 @@
                 <span class="leaderboard-margenta">&#128081; 王小明 600 &#9733; 王宏宏 450 &#9733; 楊明王 400 &#9733; 阿翔 350 &#9733; 小羊 200 &nbsp;&nbsp;</span>
                 <span class="leaderboard-green">全台數位內容首府 來電詢問2939-3091</span>
             </marquee>
-            <div id="btn-signup">
-            <button><a href="signup.html">signup</button>
-            <button><a href="login.html">login</button>
-            </div>
+            <!-- <div id="btn-signup">
+                <button><a href="signup.html">signup</button>
+                <button><a href="login.html">login</button>
+            </div> -->
         </div>
 
         <div class="header">
             <a href="main.php"><img src="assets/img-logo.png" class="img-logo cursor-pointer"></a>
-            <a class="leaderboard-green">
-                <?php if (isset($_SESSION["loggedin"]) && $_SESSION["loggedin"] === true) {
-                     echo "你好，".$_SESSION['nickname'];
-                    //  echo $_SESSION['username'];/
-                     }
-                ?>
-            </a>
+            <div class="profile">
+                <div>
+                    <p>Username</p>
+                    <p>Exp.</p>
+                </div>
+                <div class="exp-bar"></div>
+            </div>
         </div>
         
         <div class="modal-signup">
-            <form class="form-signup">
+            <form class="form-signup" name="registerForm" method="post" action="signup.php">
                 <h1>註 冊</h1>
                 <div class="flex-horizontal">
-                    <label class="label-signup" for="account">帳號</label>
-                    <input class="input-signup" type="text" id="account" name="account" placeholder="用英文和數字歐" ></input>
+                    <label class="label-signup" for="username">帳號</label>
+                    <input class="input-signup" type="text" id="username" name="username" placeholder="用英文和數字歐" ></input>
                 </div>
                 <br>
                 <div class="flex-horizontal">
@@ -52,7 +52,7 @@
                 </div>
                 <br>
                 <label class="label-signup" for="agree_toc">
-                    <input class="checkbox-signup" type="checkbox" id="agree_toc" name="agree_toc" value="1"></input>
+                    <input class="checkbox-signup" type="checkbox" id="agree_toc" name="agree_toc"></input>
                     <span class="checkmark"></span>我同意<span class="toc-link">使用條款</span>
                 </label>
                 <br>
@@ -382,6 +382,8 @@
         <div id="overlay"></div>
     </body>
 
+    <script src="ad.js"></script>
     <script src="script.js"></script>
+    
 
 </html>
