3/22 傳送心測、題目放db

--- a/assets/game/2-flip-card-game-master/index.html
+++ b/assets/game/2-flip-card-game-master/index.html
@@ -19,8 +19,8 @@
             </div>
         </div>
         <div id="score-panel">
-            <h2 id="count">0</h2> 
             <h2 id="timer">40</h2>  
+            <h2>count: </h2><h2 id="count">0</h2>
         </div>
         <section id="memory-game">
             <div class="memory-card" data-framework="banana">
@@ -74,7 +74,7 @@
         </section>
         <div id="gameEnd">
             <img id="result" src="../2-flip-card-game-master/cardImg/03_with bg.png" alt="">
-            <button id="leave">
+            <button id="leave" onclick="goEnd()">
                 <img src="../2-flip-card-game-master/cardImg/Asset 11@2x.png" width="400px" height="auto"alt="">
             </button>
         </div>
