--- a/test.html
+++ b/test.html
@@ -5,35 +5,8 @@
     </head>
     <body>
         <p>aaa</p>
-        <button>Click</button>
-        <script>
-
-            var board = [
-                {
-                    user:"jijei",
-                    pwd:"weijei"
-                },{
-                    user:"222",
-                    pwd:"weijei"
-                },{
-                    user:"333",
-                    pwd:"weijei"
-                }
-            ]
-
-            $("button").click(function() {
-                $.ajax({
-                    url:"php/board.php",
-                    success: function(data) {
-                        len = JSON.parse(data).length
-                        for (let i = 0; i < len ; i++) {
-                            console.log(JSON.parse(data)[i].username)
-                            console.log(JSON.parse(data)[i].score)
-                        }
-                    }
-                })
-            })
-
-        </script>
+        <p id="demo"></p>
+        <button onclick="typeWriter()" >Click</button>
+        <script src="end.js"></script>
     </body>
 </html>
